--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "agilite-node-red",
     "private": true,
-    "version": "6.4.0",
+    "version": "6.5.0",
     "description": "Agilit-e Node-RED",
     "main": "app.js",
     "scripts": {
@@ -18,11 +18,14 @@
         "compression": "1.7.4",
         "dotenv": "8.0.0",
         "express": "4.17.1",
+        "lodash": "4.17.14",
+        "moment": "2.24.0",
         "node-red": "0.20.7",
-        "node-red-contrib-agilite": "6.4.1",
+        "node-red-contrib-agilite": "6.5.0",
         "node-red-contrib-agilite-utils": "6.4.1",
         "node-red-contrib-fullsplitter": "0.0.2",
         "node-red-contrib-globalgetset": "2.0.3",
+        "type-detect": "4.0.8",
         "when": "3.7.8"
     }
 }
