--- a/package.json
+++ b/package.json
@@ -1,30 +1,46 @@
 {
     "name": "agilite-node-red",
-    "private": false,
-    "version": "6.6.1",
+    "version": "7.3.1",
     "description": "Agilit-e Node-RED",
-    "main": "app.js",
+    "main": "main.js",
     "scripts": {
-        "start": "node app.js"
+        "dev": "run-script-os",
+        "dev:windows": "standard && SET NODE_ENV=development && nodemon",
+        "dev:default": "standard && NODE_ENV=development && nodemon",
+        "build": "standard",
+        "main": "run-script-os",
+        "main:windows": "SET NODE_ENV=production && node main.js",
+        "main:default": "NODE_ENV=production node main.js"
     },
     "author": "Node-RED/Agilit-e",
     "license": "Apache-2.0",
     "repository": {},
     "engines": {
-        "node": "10.15.2"
+        "node": ">=12.18 <15"
+    },
+    "devDependencies": {
+        "chai": "4.3.4",
+        "mocha": "8.4.0",
+        "standard": "16.0.3"
     },
     "dependencies": {
-        "axios": "0.19.0",
+        "helmet": "4.6.0",
+        "run-script-os": "1.1.6",
+        "@sentry/node": "6.4.0",
+        "agilite": "7.3.8",
+        "axios": "0.21.1",
         "compression": "1.7.4",
-        "dotenv": "8.2.0",
+        "date-fns": "2.21.3",
+        "date-fns-tz": "1.1.4",
+        "dotenv": "9.0.2",
         "express": "4.17.1",
-        "lodash": "4.17.15",
-        "moment": "2.24.0",
-        "node-red": "1.0.2",
-        "node-red-contrib-agilite": "6.6.1",
-        "node-red-contrib-agilite-utils": "6.4.1",
-        "node-red-contrib-fullsplitter": "0.0.2",
-        "node-red-contrib-globalgetset": "2.0.3",
+        "lodash": "4.17.21",
+        "moment": "2.29.1",
+        "moment-timezone": "0.5.33",
+        "node-red": "1.3.4",
+        "node-red-contrib-agilite": "7.3.7",
+        "node-red-contrib-agilite-utils": "7.3.1",
+        "node-red-contrib-bigtimer": "2.7.5",
         "type-detect": "4.0.8",
         "when": "3.7.8"
     }
